--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "wrangler dev --local",
+    "deploy": "wrangler deploy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module", 
   "dependencies": {
-    "axios": "^1.11.0",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "fs-extra": "^11.3.0",
-    "node-telegram-bot-api": "^0.66.0",
+    "hono": "^4.6.8",
     "openai": "^5.11.0"
   },
   "devDependencies": {
