Update dependencies to include 'grammy' version 1.37.0 and related packages. Refactor Telegram webhook handling to utilize new bot structure, improving message processing and error handling. Remove deprecated TelegramBot class and related methods.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module", 
+  "type": "module",
   "dependencies": {
+    "grammy": "^1.37.0",
     "hono": "^4.6.8",
     "openai": "^5.11.0"
   },
