--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "aws4fetch": "^1.0.20",
     "grammy": "^1.37.0",
     "hono": "^4.6.8",
     "openai": "^5.11.0"
