--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,6 +11,10 @@ id = "37462871a7824d94985cbbdcdb4baf08"
 binding = "JOBS"
 id = "8837ef40371245b4ac1d70bbc81c9831"
 
+[[kv_namespaces]]
+binding = "ENTITLEMENTS"
+id = "a66512c3666e4f52b31465224b97485e"
+
 [[r2_buckets]]
 binding = "M4A_BUCKET"
 bucket_name = "m4a-to-notes"
@@ -38,4 +42,7 @@ R2_REGION = "auto"
 # - OPENAI_API_KEY  
 # - R2_ACCESS_KEY_ID
 # - R2_SECRET_ACCESS_KEY
+# - INTERNAL_API_SECRET
+# - PADDLE_API_KEY (for subscription management)
+# - PADDLE_ENVIRONMENT (sandbox or production)
 
