--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "type": "module",
   "dependencies": {
     "aws4fetch": "^1.0.20",
+    "drizzle-orm": "^0.44.4",
     "grammy": "^1.37.0",
     "hono": "^4.6.8",
     "openai": "^5.11.0"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.31.4",
     "wrangler": "^4.27.0"
   }
 }
