Refactor reconciliation and webhook handling for Paddle integration
- Removed manual and scheduled reconciliation handlers as they are no longer needed with the new canonical sync approach.
- Updated wrangler.toml to reflect the absence of cron triggers for reconciliation.
- Enhanced transcription job processing by integrating Telegram notifications and improving error handling.
- Streamlined queue consumer to focus solely on transcription jobs, eliminating Paddle webhook processing from the queue.
- Added logging for audio buffer creation and transcription success, ensuring better observability.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -32,8 +32,7 @@ max_batch_size = 5
 max_batch_timeout = 5
 
 
-[triggers]
-crons = ["0 2 * * *"]  # Run reconciliation daily at 2 AM UTC
+# No cron triggers needed with canonical sync approach
 
 # wrangler.toml (wrangler v3.88.0^)
 [observability.logs]
