Update project structure and dependencies for TypeScript migration
- Converted main entry point from JavaScript to TypeScript by changing `src/index.js` to `src/index.ts`.
- Added TypeScript and @types/node as development dependencies to support TypeScript compilation.
- Introduced new scripts for type checking and type generation in the package.json.
- Updated package-lock.json to reflect the new dependencies and their versions.
- Removed legacy JavaScript files and related services to streamline the codebase.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "wrangler dev --local",
-    "deploy": "wrangler deploy"
+    "deploy": "wrangler deploy",
+    "type-check": "tsc --noEmit",
+    "generate-types": "wrangler types"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +22,9 @@
     "openai": "^5.11.0"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "drizzle-kit": "^0.31.4",
+    "typescript": "^5.9.2",
     "wrangler": "^4.27.0"
   }
 }
