--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "m4a-to-notes"
-main = "src/index.js"
+main = "src/index.ts"
 compatibility_date = "2024-01-01"
 account_id = "e2c1e0edd19dc5cd47f9acd256ba94ec"
 
