Enhance database integration and update dependencies
- Added support for SQLite database integration across various services, including JobsService and UsersService, to replace KV storage.
- Updated package.json and package-lock.json to include new dependencies for SQLite and related libraries.
- Modified middleware and handler functions to utilize the new database structure for managing conversations and jobs.
- Improved error handling and logging throughout the application for better observability.
- Updated .gitignore to exclude SQLite database files and added new scripts for database management.
- Refactored PaddleSyncService to work with the new database structure, ensuring seamless integration with user entitlements.

--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "dev": "wrangler dev --local",
     "deploy": "wrangler deploy",
     "type-check": "tsc --noEmit",
-    "generate-types": "wrangler types"
+    "generate-types": "wrangler types",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@libsql/client": "^0.15.14",
     "aws4fetch": "^1.0.20",
     "drizzle-orm": "^0.44.4",
     "grammy": "^1.37.0",
