--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "openai": "^5.11.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250831.0",
     "@types/node": "^24.3.0",
     "drizzle-kit": "^0.31.4",
     "typescript": "^5.9.2",
