Enhance transcription workflow and update dependencies
- Introduced a new `transcriptions` table to replace the deprecated `jobs` table, focusing on domain-specific data for transcription processes.
- Refactored API handlers to utilize the new `TranscriptionsService`, streamlining job creation and retrieval.
- Updated the transcription orchestrator to handle audio processing and error management more effectively.
- Added comprehensive testing guidelines in CLAUDE.md to ensure robust implementation.
- Integrated `@biomejs/biome` for improved linting and formatting capabilities in the development workflow.
- Removed obsolete files and services related to job management, simplifying the codebase.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "generate-types": "wrangler types",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "format": "biome format .",
+    "format:fix": "biome format --write .",
+    "check": "biome check .",
+    "check:fix": "biome check --write ."
   },
   "keywords": [],
   "author": "",
@@ -26,6 +32,7 @@
     "openai": "^5.11.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.3",
     "@cloudflare/workers-types": "^4.20250831.0",
     "@types/node": "^24.3.0",
     "drizzle-kit": "^0.31.4",
