--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "type-check": "tsc --noEmit",
     "generate-types": "wrangler types",
     "db:generate": "drizzle-kit generate",
+    "db:generate:local": "drizzle-kit generate --config=drizzle.config.local.ts",
+    "db:generate:prod": "drizzle-kit generate --config=drizzle.config.prod.ts",
     "db:migrate": "drizzle-kit migrate",
+    "db:migrate:local": "drizzle-kit migrate --config=drizzle.config.local.ts",
+    "db:migrate:prod": "drizzle-kit migrate --config=drizzle.config.prod.ts",
     "db:studio": "drizzle-kit studio",
+    "db:studio:local": "drizzle-kit studio --config=drizzle.config.local.ts",
+    "db:studio:prod": "drizzle-kit studio --config=drizzle.config.prod.ts",
     "lint": "biome lint .",
     "lint:fix": "biome lint --write .",
     "format": "biome format .",
